# predictive-risk-engine

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: README.md
notebooks/: 01_exploration.ipynb  02_feature_engineering.ipynb  03_model_training.ipynb  04_shap_analysis.ipynb  05_impact_calculation.ipynb
src/config/: __init__.py  settings.yaml
src/data/: feature_engineering.py  preprocess.py
src/models/: evaluate.py  impact.py  model.pkl  shap_explain.py  train_model.py
src/reports/: weekly_report.py
src/reports/templates/: weekly_template.html
src/risk_engine/: cli.py
src/risk_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/risk_engine/config/: feature_metadata.yaml  thresholds.yaml
src/risk_engine/data/: feature_engineering.py  preprocess.py
src/risk_engine/models/: impact.py  shap_explain.py  train_model.py
src/risk_engine/reports/: weekly_report.py
tests/: test_model.py  test_preprocessing.py  test_reports.py
