[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "risk-engine"
version = "0.1.0"
description = "Open-core churn risk engine with XGBoost, SHAP explainability, and automated reporting"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "Kaizar", email = "info@kaizar.nl"}
]
keywords = ["churn", "risk", "machine-learning", "xgboost", "shap", "explainability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "shap>=0.44",
    "jinja2>=3.1",
    "weasyprint>=60.0",
    "kagglehub>=0.2",
    "joblib>=1.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
notebooks = [
    "jupyter>=1.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "altair>=5.0",
]

[project.scripts]
risk-engine = "risk_engine.cli:main"

[project.urls]
Homepage = "https://kaizar.nl"
Repository = "https://github.com/KaizarAnalytics/predictive-risk-engine"
Documentation = "https://kaizar.nl/posts/risk-engine.html"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["risk_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
